--- a/AllergySafety-Client/index.html
+++ b/AllergySafety-Client/index.html
@@ -17,7 +17,7 @@
     <script>
         window.fbAsyncInit = function() {
             FB.init({
-                appId: 'YOUR_FACEBOOK_APP_ID',
+                appId: '%VITE_FACEBOOK_APP_ID%',
                 cookie: true,
                 xfbml: true,
                 version: 'v18.0'
